--- a/templates/pages/kas.html
+++ b/templates/pages/kas.html
@@ -14,7 +14,9 @@
 
     <div style="margin-top: -2.5rem; margin-bottom: 0.4rem; justify-content: end;" class="d-flex gap-3">
     
-        <button type="button" class="btn btn-info btn-sm" data-bs-toggle="modal" data-bs-target="#modal_laporan">LAPORAN</button>
+            {% comment %} <div>
+                <button type="button" class="btn btn-success btn-sm" data-bs-toggle="modal" data-bs-target="#modal_laporan">LAPORAN</button>
+            </div> {% endcomment %}
     </div>
   
     <table id="tabel_index" class="table table-striped table-bordered text-white" style="width:100%">
@@ -26,10 +28,16 @@
                 <th class="text-center">Surat</th>
                 <th class="text-center">Trak</th>
                 <th class="text-center">Jam</th>
-                <th class="text-center">Pemasukan</th>
-                <th class="text-center">Pengeluaran</th>
+                <th class="text-center">Masuk</th>
+                <th class="text-center">Keluar</th>
                 <th class="text-center">Saldo</th>
-                <th class="text-center">Edit</th>
+
+                {% if group == 'super_admin' %}
+                    <th class="text-center">Edit</th>
+                {% else %} 
+
+
+                {% endif %}
         </thead>
         <tbody>
             {% for data in data_kas %}
@@ -43,9 +51,17 @@
                     <td class="text-end">{{ data.pemasukan | floatformat:"-3g" }}</td>  
                     <td class="text-end">{{ data.pengeluaran | floatformat:"-3g" }}</td>
                     <td class="text-end">{{ data.saldo | floatformat:"-3g" }}</td>  
+
+                    {% if group == 'super_admin' %}
+
                     <td class="text-center gap-2">
                         <button type="button" class="btn btn-success btn-sm  fa-solid fa-pen-to-square" data-bs-toggle="modal" data-placement="bottom" title="Penambahan " data-bs-target="#button_kas_pemasukan{{ data.id }}"></button>
                     </td> 
+
+                    {% else %} 
+
+
+                    {% endif %}
                </tr>
             {% endfor %}
         </tbody>
@@ -59,6 +75,6 @@
 </div>
 
 {%include 'modal/kas.html' %}
-
+{%include 'modal/laporan.html' %}
 
 {% endblock  %}
