--- a/templates/pages/rapat_filter.html
+++ b/templates/pages/rapat_filter.html
@@ -1,14 +1,17 @@
 {% extends "base.html" %}
 {% load static %}
+{% load l10n %}
 
-{% block dashboard %} 
-
-{% include "partials/index_header.html" %}
+{% block  kas %}
 
 
-<div class="container-fluid mt-1 text-white" style="">
+{%include 'partials/index_header.html' %}
+
+
+<div class="container-fluid mt-3 text-white" style="">
     
-    <h5 class="text-center fw-bold mt-3">RAPAT HARI INI {% now "l, j M Y" %}</h5>
+    <h5 class="text-center fw-bold">RAPAT</h5>
+
     <div style="margin-top: -2.5rem; margin-bottom: 0.4rem; justify-content: space-between;" class="d-flex gap-3">
     
         <form action ="{% url 'cari_tgl_rapat' %}" method="POST" >
@@ -22,8 +25,10 @@
                 </div>
             </div> 
         </form>
-           
+
+        
     </div>
+  
     <table id="tabel_index" class="table table-striped table-bordered text-white" style="width:100%">
         <thead>
             <tr>
@@ -36,7 +41,7 @@
                 <th class="text-center">Files</th>
         </thead>
         <tbody>
-            {% for data in dbsurat %}
+            {% for data in rapat_filter %}
                <tr>
                 <td class="text-center ">{{ forloop.counter }}</td>
                 <td class="text-center">{{ data.tgl | date:"d M Y"}}</td>
@@ -55,17 +60,13 @@
     </table>
 </div>
 
-{% include 'modal/dashboard.html' %}
-
 <div class="container">
     <footer class="py-1 my-1">
       <p class="text-center text-muted">&copy; 2025 - {% now "Y" %} RAPAT PROGLAP By Abdul Rachman</p>
     </footer>
 </div>
 
-{% endblock dashboard %}
+{%include 'modal/kas.html' %}
 
 
-
-
-
+{% endblock  %}
